// Vitest Snapshot v1

exports[`Tag renders tag with Episode 1`] = `
<div>
  <div
    class="tag normal"
  >
    tag_episode
  </div>
</div>
`;

exports[`Tag renders tag with Live 1`] = `
<div>
  <div
    class="tag normal live"
  >
    live
  </div>
</div>
`;

exports[`Tag renders tag with Season and Episode 1`] = `
<div>
  <div
    class="tag normal"
  >
    tag_season_episode
  </div>
</div>
`;

exports[`Tag renders tag with Series 1`] = `
<div>
  <div
    class="tag normal"
  >
    tag_series
  </div>
</div>
`;

exports[`Tag renders tag with duration 1`] = `
<div>
  <div
    class="tag normal"
  >
    tag_duration_minutes
  </div>
</div>
`;

exports[`renders card with video title 1`] = `
<div>
  <div
    aria-label="play_item"
    class="card"
    role="button"
    tabindex="0"
  >
    <div
      class="poster aspect169"
    >
      <div
        class="meta"
      >
        <div
          class="tags"
        >
          <div
            aria-label="card_lock"
            class="tag lock"
          >
            <svg
              aria-hidden="true"
              class="icon"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
                fill="currentColor"
              />
            </svg>
          </div>
          tag_duration_minutes
        </div>
      </div>
    </div>
    <div
      class="titleContainer"
    >
      <div
        class="title"
      >
        aa
      </div>
    </div>
  </div>
</div>
`;
